--- a/boards/arm/zgm_001/zgm_001.dts
+++ b/boards/arm/zgm_001/zgm_001.dts
@@ -23,14 +23,14 @@
 	leds: leds {
 		compatible = "gpio-leds";
 		green_led: led_0 {
-			gpios = <&gpioc 4 GPIO_ACTIVE_HIGH>;
+			gpios = <&gpioc 6 GPIO_ACTIVE_HIGH>;
 			label = "User LD2";
 		};
 	};
 	aliases {
 		led0 = &green_led;
-		mcuboot-led0 = &green_led;
 		watchdog0 = &iwdg;
+		can0 = &fdcan1;
 	};
 };
 
@@ -121,4 +121,11 @@ stm32_lp_tick_source: &lptim1 {
 	};
 };
 
-
+/* 配置 CAN1 控制器 */
+&fdcan1 {
+	clocks = <&rcc STM32_CLOCK_BUS_APB1 0x02000000>,
+	<&rcc STM32_SRC_HSE FDCAN_SEL(0)>;
+	pinctrl-0 = <&fdcan1_rx_pa11 &fdcan1_tx_pa12>;
+	pinctrl-names = "default";
+	status = "okay";    
+};
