zgm_002,增加INA226配置

--- a/boards/arm/zgm_002/zgm_002.dts
+++ b/boards/arm/zgm_002/zgm_002.dts
@@ -235,3 +235,23 @@
 		 <&rcc STM32_SRC_PLL2_Q FDCAN_SEL(2)>;
 	status = "okay";
 };
+&i2c2 {
+	pinctrl-0 = <&i2c2_scl_pb10 &i2c2_sda_pb11>;
+	pinctrl-names = "default";
+	status = "okay";
+	clock-frequency = <I2C_BITRATE_FAST>;
+
+	ina226@40 {
+		compatible = "ti,ina226";
+		reg = <0x40>;
+		
+		current-lsb-microamps = <610>;
+		rshunt-micro-ohms = <2000>;
+		
+		/* 优化配置 */
+		avg-count = <16>;
+		vbus-conversion-time-us = <1100>;
+		vshunt-conversion-time-us = <1100>;
+		operating-mode = "Shunt and Bus, Continuous";
+	};
+};
